--- a/sass/_main-pager.scss
+++ b/sass/_main-pager.scss
@@ -36,7 +36,7 @@
   &_label{
     text-align: right;
     padding: 6px 37px 0px 0px;
-    color: #122333;
+    color: #3498db;
     font-size: 14px;
     text-transform: uppercase;
     visibility: hidden;
