--- a/sass/_block-form.scss
+++ b/sass/_block-form.scss
@@ -117,6 +117,7 @@
       padding: 1px 0px 0px 0px;
       &:hover{
         cursor: pointer;
+        border: 2px solid #E74C3C;
       }
     }
     .ajax-progress{
