--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -23,6 +23,26 @@
       height: 23px;
       background: url('../image/calc-buttons.png') -23px 0px no-repeat;
     }
+    &:hover{
+      &:before{
+        -webkit-animation-name: myrotate;
+        -webkit-animation-duration: 300ms;
+        //-webkit-animation-iteration-count: infinite;
+        -webkit-animation-timing-function: linear;
+        -moz-animation-name: myrotate;
+        -moz-animation-duration: 300ms;
+        //-moz-animation-iteration-count: infinite;
+        -moz-animation-timing-function: linear;
+        -ms-animation-name: myrotate;
+        -ms-animation-duration: 300ms;
+        //-ms-animation-iteration-count: infinite;
+        -ms-animation-timing-function: linear;
+        animation-name: myrotate;
+        animation-duration: 300ms;
+        //animation-iteration-count: infinite;
+        animation-timing-function: linear;
+      }
+    }
   }
   &__calcorder{
     float: right;
@@ -42,6 +62,27 @@
       height: 23px;
       background: url('../image/calc-buttons.png') -46px 0px no-repeat;
     }
+    &:hover{
+      &:before{
+        -webkit-animation-name: mymove;
+        -webkit-animation-duration: 500ms;
+        //-webkit-animation-iteration-count: infinite;
+        -webkit-animation-timing-function: linear;
+        -moz-animation-name: mymove;
+        -moz-animation-duration: 500ms;
+        //-moz-animation-iteration-count: infinite;
+        -moz-animation-timing-function: linear;
+        -ms-animation-name: mymove;
+        -ms-animation-duration: 500ms;
+        //-ms-animation-iteration-count: infinite;
+        -ms-animation-timing-function: linear;
+        animation-name: mymove;
+        animation-duration: 500ms;
+        //animation-iteration-count: infinite;
+        animation-timing-function: linear;
+        //animation-timing-function: cubic-bezier(.15,1.12,.49,.84);
+      }
+    }
   }
   &__tarifsorder{
     width: 158px;
@@ -59,6 +100,27 @@
       width: 23px;
       height: 23px;
       background: url('../image/calc-buttons.png') -46px 0px no-repeat;
+    }
+    &:hover{
+      &:before{
+        -webkit-animation-name: mymove;
+        -webkit-animation-duration: 500ms;
+        //-webkit-animation-iteration-count: infinite;
+        -webkit-animation-timing-function: linear;
+        -moz-animation-name: mymove;
+        -moz-animation-duration: 500ms;
+        //-moz-animation-iteration-count: infinite;
+        -moz-animation-timing-function: linear;
+        -ms-animation-name: mymove;
+        -ms-animation-duration: 500ms;
+        //-ms-animation-iteration-count: infinite;
+        -ms-animation-timing-function: linear;
+        animation-name: mymove;
+        animation-duration: 500ms;
+        //animation-iteration-count: infinite;
+        animation-timing-function: linear;
+        //animation-timing-function: cubic-bezier(.15,1.12,.49,.84);
+      }
     }
   }
   &__tariforder{
@@ -78,6 +140,27 @@
       width: 23px;
       height: 23px;
       background: url('../image/calc-buttons.png') -46px 0px no-repeat;
+    }
+    &:hover{
+      &:before{
+        -webkit-animation-name: mymove;
+        -webkit-animation-duration: 500ms;
+        //-webkit-animation-iteration-count: infinite;
+        -webkit-animation-timing-function: linear;
+        -moz-animation-name: mymove;
+        -moz-animation-duration: 500ms;
+        //-moz-animation-iteration-count: infinite;
+        -moz-animation-timing-function: linear;
+        -ms-animation-name: mymove;
+        -ms-animation-duration: 500ms;
+        //-ms-animation-iteration-count: infinite;
+        -ms-animation-timing-function: linear;
+        animation-name: mymove;
+        animation-duration: 500ms;
+        //animation-iteration-count: infinite;
+        animation-timing-function: linear;
+        //animation-timing-function: cubic-bezier(.15,1.12,.49,.84);
+      }
     }
   }
 	&__phone{
@@ -137,5 +220,47 @@
 @keyframes spin {
   50% {
     transform:rotate(30deg);
+  }
+}
+
+@-ms-keyframes myrotate {
+  50% {
+    transform: scaleX(0);
+  }
+}
+@-moz-keyframes myrotate {
+  50% {
+    transform: scaleX(0);
+  }
+}
+@-webkit-keyframes myrotate {
+  50% {
+    transform: scaleX(0);
+  }
+}
+@keyframes myrotate {
+  50% {
+    transform: scaleX(0);
+  }
+}
+
+@-ms-keyframes mymove {
+  50% {
+    transform: translateX(-10px);
+  }
+}
+@-moz-keyframes mymove {
+  50% {
+    transform: translateX(-10px);
+  }
+}
+@-webkit-keyframes mymove {
+  50% {
+    transform: translateX(-10px);
+  }
+}
+@keyframes mymove {
+  50% {
+    transform: translateX(-10px);
   }
 }
