--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -9,21 +9,25 @@
   &_up{
     position: absolute;
     top: 9px;
-    right: 128px;
+    right: 0px;
     display: block;
     text-indent: 100%;
     white-space: nowrap;
     overflow: hidden;
     width: 49px;
     height: 49px;
-    background: url('../image/up.jpg') no-repeat;
-    @include def-opacity(0.5);
+    background: url('../image/up.png') 50% 50% no-repeat #999999;
+    //@include def-opacity(0.5);
     &:hover{
-      @include def-opacity(1);
+      //@include def-opacity(1);
+      background-color: #ccc;
     }
   }
   &_section{
     float: left;
+    &__social{
+      float: right;
+    }
   }
   &_copyright{
     color: #ffffff;
