--- a/sass/_form-discount.scss
+++ b/sass/_form-discount.scss
@@ -63,11 +63,13 @@
   &_button{
     padding: 9px 0px 0px 0px;
     position: relative;
+    z-index: 5;
     input{
       width: 231px;
       height: 56px;
       border: none;
       background-color: #3498db;
+      //border: 1px solid #3498db;
       font-family: $bold;
       color: #ffffff;
       font-size: 20px;
@@ -75,8 +77,11 @@
       padding: 1px 0px 0px 0px;
       &:hover{
         cursor: pointer;
+        //border: 1px solid #19254B;
+        background-color: #E74C3C;
+        //@include def-v-gradient(#E74C3C, #E74C3C);
       }
-      @include def-v-gradient(#3498db, #3498db);
+      //@include def-v-gradient(#3498db, #3498db);
     }
     .ajax-progress{
       position: absolute;
