--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -56,7 +56,7 @@ button, input[type="reset"], input[type="button"], input[type="submit"] {
 strong, b{
   font-family: $bold;
 }
-i{
+i, em{
   font-family: $italic;
 }
 .light{
