--- a/sass/_block-form.scss
+++ b/sass/_block-form.scss
@@ -117,7 +117,8 @@
       padding: 1px 0px 0px 0px;
       &:hover{
         cursor: pointer;
-        border: 2px solid #E74C3C;
+        border: 2px solid #3498db;
+        background-color: #3498db;
       }
     }
     .ajax-progress{
