--- a/sass/_form-action.scss
+++ b/sass/_form-action.scss
@@ -54,7 +54,8 @@
       padding: 1px 0px 0px 0px;
       &:hover{
         cursor: pointer;
-        border: 2px solid #E74C3C;
+        border: 2px solid #3498db;
+        background-color: #3498db;
       }
     }
     .ajax-progress{
