--- a/sass/_form-popup.scss
+++ b/sass/_form-popup.scss
@@ -99,7 +99,10 @@
       padding: 1px 0px 0px 0px;
       &:hover{
         cursor: pointer;
-        background-color: #3498db;
+        //background-color: #3498db;
+        -webkit-box-shadow: 5px 5px 5px 0px rgba(52,152,219,1);
+-moz-box-shadow: 5px 5px 5px 0px rgba(52,152,219,1);
+box-shadow: 5px 5px 5px 0px rgba(52,152,219,1);
       }
       //@include def-v-gradient(#e74c3c, #e74c3c);
     }
