--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -263,77 +263,77 @@ textarea:focus {
   animation-delay: .9s;
 }
 
-.delay-1s {
+.delay-010s {
   -webkit-animation-delay: 1s;
   -moz-animation-delay: 1s;
   -o-animation-delay: 1s;
   animation-delay: 1s;
 }
 
-.delay-11s {
+.delay-011s {
   -webkit-animation-delay: 1.1s;
   -moz-animation-delay: 1.1s;
   -o-animation-delay: 1.1s;
   animation-delay: 1.1s;
 }
 
-.delay-12s {
+.delay-012s {
   -webkit-animation-delay: 1.2s;
   -moz-animation-delay: 1.2s;
   -o-animation-delay: 1.2s;
   animation-delay: 1.2s;
 }
 
-.delay-13s {
+.delay-013s {
   -webkit-animation-delay: 1.3s;
   -moz-animation-delay: 1.3s;
   -o-animation-delay: 1.3s;
   animation-delay: 1.3s;
 }
 
-.delay-14s {
+.delay-014s {
   -webkit-animation-delay: 1.4s;
   -moz-animation-delay: 1.4s;
   -o-animation-delay: 1.4s;
   animation-delay: 1.4s;
 }
 
-.delay-15s {
+.delay-015s {
   -webkit-animation-delay: 1.5s;
   -moz-animation-delay: 1.5s;
   -o-animation-delay: 1.5s;
   animation-delay: 1.5s;
 }
 
-.delay-16s {
+.delay-016s {
   -webkit-animation-delay: 1.6s;
   -moz-animation-delay: 1.6s;
   -o-animation-delay: 1.6s;
   animation-delay: 1.6s;
 }
 
-.delay-17s {
+.delay-017s {
   -webkit-animation-delay: 1.7s;
   -moz-animation-delay: 1.7s;
   -o-animation-delay: 1.7s;
   animation-delay: 1.7s;
 }
 
-.delay-18s {
+.delay-018s {
   -webkit-animation-delay: 1.8s;
   -moz-animation-delay: 1.8s;
   -o-animation-delay: 1.8s;
   animation-delay: 1.8s;
 }
 
-.delay-19s {
+.delay-019s {
   -webkit-animation-delay: 1.9s;
   -moz-animation-delay: 1.9s;
   -o-animation-delay: 1.9s;
   animation-delay: 1.9s;
 }
 
-.delay-2s {
+.delay-020s {
   -webkit-animation-delay: 2s;
   -moz-animation-delay: 2s;
   -o-animation-delay: 2s;
@@ -2777,6 +2777,25 @@ textarea:focus {
   visibility: hidden;
 }
 * html .main4_wrap {
+  height: 1%;
+}
+.main4-wrap {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  * zoom: 1;
+  display: block;
+  padding: 0px 0px 30px 0px;
+}
+.main4-wrap:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+* html .main4-wrap {
   height: 1%;
 }
 .main4_item {
