--- a/sass/_main4.scss
+++ b/sass/_main4.scss
@@ -19,6 +19,10 @@
     @include clearfix();
     padding: 0px 0px 30px 0px;
   }
+  &-wrap{
+    @include clearfix();
+    padding: 0px 0px 30px 0px;
+  }
   &_item{
     height: 188px;
     width: 33.33%;
