--- a/sass/_price.scss
+++ b/sass/_price.scss
@@ -18,6 +18,10 @@
       background-color: #3498db;
     }
   }
+  &_footer{
+    font-size: 13px;
+    margin: 34px 0px 0px 0px;
+  }
   &_descr{
     padding: 0px 0px 41px 0px;
   }
