--- a/sass/_tarifs.scss
+++ b/sass/_tarifs.scss
@@ -27,6 +27,10 @@
 			height: 3px; 
 		}
 	}
+	&_footer{
+		font-size: 13px;
+		margin: -40px 0px 40px 0px;
+	}
 	&_link{
 		margin: 2px 0px 0px 0px;
 		padding: 16px 0px 0px 50px;
