--- a/sass/_form-discount.scss
+++ b/sass/_form-discount.scss
@@ -35,7 +35,7 @@
     span{
       display: block;
       text-align: center;
-      color: #373737;
+      //color: #373737;
       font-size: 56px;
       padding: 4px 0px 10px 0px;
     }
