--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -446,8 +446,9 @@ textarea:focus {
   width: 640px;
   border: none;
   padding: 0px 0px 0px 9px;
-  margin: 0px 0px 87px 0px;
+  margin: 0px 0px 77px 0px;
   line-height: 1.2;
+  font-size: 35px;
 }
 .title_descr {
   width: 480px;
@@ -1200,7 +1201,6 @@ textarea:focus {
 .form-discount_title span {
   display: block;
   text-align: center;
-  color: #373737;
   font-size: 56px;
   padding: 4px 0px 10px 0px;
 }
@@ -1290,7 +1290,7 @@ textarea:focus {
   background-color: #3498db;
 }
 .main-descr_title {
-  margin: 35px 0px 0px 0px;
+  margin: 23px 0px 0px 0px;
   padding: 0px 20px 0px 26px;
   font-size: 36px;
   color: #ffffff;
@@ -2575,7 +2575,7 @@ textarea:focus {
 }
 
 .action_title {
-  font-size: 54px;
+  font-size: 38px;
   padding: 17px 0px 5px 0px;
   color: #ffffff;
   text-transform: uppercase;
@@ -2592,7 +2592,7 @@ textarea:focus {
   background-color: #ffffff;
 }
 .action_descr {
-  font-size: 26px;
+  font-size: 24px;
   color: #ffffff;
   line-height: 1.2;
 }
@@ -2602,6 +2602,7 @@ textarea:focus {
   background-size: contain;
   background-position: 50% 50%;
   padding: 0px 10px 0px 10px;
+  background-size: 100%;
   /*&:before{
     content: " ";
     display: block;
@@ -3003,7 +3004,7 @@ textarea:focus {
 }
 
 .main6 {
-  height: 319px;
+  min-height: 319px;
   padding: 41px 0px 0px 0px;
   overflow: hidden;
   /*bxslider*******************************/
@@ -3101,7 +3102,7 @@ textarea:focus {
 }
 .main6 .bx-wrapper {
   position: relative;
-  margin: 0 auto 60px;
+  margin: 0 auto 40px;
   padding: 0;
   *zoom: 1;
 }
