--- a/sass/_action.scss
+++ b/sass/_action.scss
@@ -1,6 +1,6 @@
 .action{
   &_title{
-    font-size: 54px;
+    font-size: 38px;
     padding: 17px 0px 5px 0px;
     color: #ffffff;
     text-transform: uppercase;
@@ -17,7 +17,7 @@
     }
   }
   &_descr{
-    font-size: 26px;
+    font-size: 24px;
     color: #ffffff;
     line-height: 1.2;
     span{
@@ -26,7 +26,7 @@
       background-size: contain;
       background-position: 50% 50%;
       padding: 0px 10px 0px 10px;
-      
+      background-size: 100%;
       /*&:before{
         content: " ";
         display: block;
