--- a/sass/_main6.scss
+++ b/sass/_main6.scss
@@ -1,5 +1,5 @@
 .main6{
-	height: 319px;
+	min-height: 319px;
 	padding: 41px 0px 0px 0px;
 	overflow: hidden;
   &__review{
@@ -71,7 +71,7 @@
   /*bxslider*******************************/
   .bx-wrapper {
     position: relative;
-    margin: 0 auto 60px;
+    margin: 0 auto 40px;
     padding: 0;
     *zoom: 1;
   }
