--- a/sass/_title.scss
+++ b/sass/_title.scss
@@ -61,8 +61,9 @@
       width: 640px;
       border: none;
       padding: 0px 0px 0px 9px;
-      margin: 0px 0px 87px 0px;
+      margin: 0px 0px 77px 0px;
       line-height: 1.2;
+      font-size: 35px;
     }
   }
   &_descr{
