form-popup min height

--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -1315,6 +1315,7 @@ textarea:focus {
 }
 
 .form-popup {
+  min-height: 300px;
   /*input[type="checkbox"]:checked + label {
     border-color: #3498db;
   }*/
