new button color forms

--- a/sass/_form-discount.scss
+++ b/sass/_form-discount.scss
@@ -68,7 +68,7 @@
       width: 231px;
       height: 56px;
       border: none;
-      background-color: #3498db;
+      background-color: #e74c3c;
       //border: 1px solid #3498db;
       font-family: $bold;
       color: #ffffff;
