--- a/sass/_main-descr.scss
+++ b/sass/_main-descr.scss
@@ -26,7 +26,9 @@
   &_descr{
     padding: 11px 20px 0px 26px;
     font-size: 17px; 
-    color: #ffffff;
+    color: #e74c3c;
+    //font-weight: bold;
+    font-family: 'proximanova_bold';
     line-height: 1.2;
   }
 }
