--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -1233,7 +1233,7 @@ textarea:focus {
   width: 231px;
   height: 56px;
   border: none;
-  background-color: #3498db;
+  background-color: #e74c3c;
   font-family: proximanova_bold;
   color: #ffffff;
   font-size: 20px;
@@ -1310,7 +1310,8 @@ textarea:focus {
 .main-descr_descr {
   padding: 11px 20px 0px 26px;
   font-size: 17px;
-  color: #ffffff;
+  color: #e74c3c;
+  font-family: 'proximanova_bold';
   line-height: 1.2;
 }
 
@@ -2708,8 +2709,8 @@ textarea:focus {
 .form-action_button input {
   width: 229px;
   height: 54px;
-  border: 2px solid #ffffff;
-  background-color: transparent;
+  border: none;
+  background-color: #e74c3c;
   font-family: proximanova_bold;
   color: #ffffff;
   font-size: 20px;
