--- a/sass/_form-action.scss
+++ b/sass/_form-action.scss
@@ -45,8 +45,9 @@
     input{
       width: 229px;
       height: 54px;
-      border: 2px solid #ffffff;
-      background-color: transparent;
+      //border: 2px solid #ffffff;
+      border: none;
+      background-color: #e74c3c;
       font-family: $bold;
       color: #ffffff;
       font-size: 20px;
